# lamp

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  hermes.md  transfer_doc.md
dlbackend/: .env.example  Makefile  nginx-ssl.conf  nginx.conf  pyproject.toml
dlbackend/src/: config.py  factory.py  server.py
dlbackend/src/core/crypto/: __init__.py  base.py  constants.py  rsa_aes.py
dlbackend/src/core/enums/: __init__.py  audio.py  facial_emotion.py  files.py  object.py  perception.py  speech_emotion_recognizer.py
dlbackend/src/core/models/: __init__.py  audio.py  audio_emotion.py  crypto.py  facial_emotion.py  media.py  object.py
dlbackend/src/core/utils/: compute.py  files.py  runtime.py
dlbackend/src/dlserver/: __main__.py  app.py
dlbackend/src/dlserver/models/: action.py  audio.py  audio_emotion.py  emotion.py  facial_emotion.py  object.py  pose.py
dlbackend/src/dlserver/routes/: action.py  audio.py  audio_emotion.py  audio_recognizer.py  emotion.py  facial_emotion.py  health.py  object.py  pose.py  speech_emotion_recognizer.py
dlbackend/src/dlserver/utils/: audio.py  common.py  (+1 more)
dlbackend/src/lbserver/: __main__.py  app.py  models.py
dlbackend/tests/: conftest.py
dlbackend/tests/action_api/: test_action_analysis_ws_api.py
dlbackend/tests/action_local/: test_person_detector_local.py  test_uniformerv2_ws_local.py  test_x3d_ws_local.py
dlbackend/tests/audio_api/: test_audio_embedder_api.py
dlbackend/tests/audio_emotion_api/: test_audio_emotion_api.py
dlbackend/tests/audio_emotion_local/: test_audio_emotion_local.py
dlbackend/tests/audio_local/: test_audio_embedder_local.py
dlbackend/tests/benchmark_api/: test_benchmark_api.py  test_benchmark_mixed.py  test_benchmark_ws.py
dlbackend/tests/crypto/: test_rsa_aes.py
dlbackend/tests/crypto_api/: test_crypto_api.py
dlbackend/tests/emotion_api/: test_emotion_ws_api.py
dlbackend/tests/emotion_local/: test_emotion_ws_local.py  test_posterv2_ws_local.py
dlbackend/tests/lb_local/: test_lb_crypto.py  test_lb_proxy.py  test_roundrobin.py
dlbackend/tests/object_api/: test_object_detection_api.py
dlbackend/tests/object_local/: test_object_detection_local.py
dlbackend/tests/pose_api/: test_pose_estimation_api.py
dlbackend/tests/pose_local/: test_ergo_ws_local.py  test_rtmpose_tcpformer_local.py  test_rtmpose_ws_local.py  test_rula_local.py
dlbackend/tests/speaker_recognization_api/: test_audio_recognizer_api.py
lelamp/: .env.example  UPSTREAM.md  app_state.py  brain_benchmark_report.py  brain_demo.py  config.py  i18n.py  presets.py  pyproject.toml  server.py
lelamp/routes/: bluetooth.py  music.py  sensing.py  voice.py
lelamp/service/: audio_route.py  button_actions.py  gelf_handler.py  gpio_button.py
lelamp/service/brain/: __init__.py  audio_sink.py  base.py  benchmark.py  context_loader.py  factory.py  flow_log.py  gemini_live.py  openai_realtime.py  orchestrator.py  prompts.py  summarizer.py  text_router.py  workspace.py
lelamp/service/rgb/: effects.py
lelamp/service/sensing/: crypto.py  presence_service.py  sensing_service.py
lelamp/service/voice/: backchannel.py  music_service.py  tts_openai.py  voice_service.py
lelamp/static/: swagger-init.js
lelamp/test/: test_brain.py  test_crypto.py  test_speech_emotion_engine.py  test_speech_emotion_service.py
(+654 files in other folders)
