[project]
name = "lelamp-runtime"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepgram-sdk>=6.0.0",
    "onnxruntime>=1.16.0; sys_platform != 'darwin' or platform_machine != 'x86_64'",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "feetech-servo-sdk>=1.0.0",
    "lerobot>=0.3.3; sys_platform != 'darwin' or platform_machine != 'x86_64'",
    "livekit-agents[openai]~=1.2",
    "livekit-plugins-noise-cancellation~=0.2",
    "numpy>=2.2.6",
    "pvporcupine>=3.0.5",
    "pvrecorder>=1.2.7",
    "pyarrow==20.0.0",
    "pyaudio>=0.2.14",
    "python-dotenv",
    "python-multipart>=0.0.9",
    "requests>=2.31.0",
    "sounddevice>=0.5.2",
    "webrtcvad>=2.0.10",
    "yt-dlp>=2025.3.0",
    "Pillow>=10.0.0",
    "opencv-python>=4.8.0",
    "ultralytics>=8.4,<9",
    "soundfile>=0.12",
    "scipy>=1.8",
    "sounddevice",
    "insightface>=0.7.3; sys_platform != 'darwin' or platform_machine != 'x86_64'",
    "onnxruntime>=1.23.2",
    "insightface>=0.7.3",
    "cryptography>=44.0.0",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [".."]
include = ["lelamp"]

[tool.uv]
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'aarch64'",
    "sys_platform == 'darwin' and platform_machine == 'x86_64'",
]

[tool.uv.sources]
lerobot = { git = "https://github.com/huggingface/lerobot", rev = "55198de096f46a8e0447a8795129dd9ee84c088c" }

[project.optional-dependencies]
hardware = [
    "adafruit-circuitpython-neopixel",
    "adafruit-circuitpython-neopixel-spi",
    "gpiozero",
    "lgpio",
    "rpi-ws281x",
    "spidev",
]
